--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  name: "catetkeun",
+  "name": "catetkeun",
   "version": "0.0.1",
   "description": "App Catetkeun",
   "main": "src/index.jsx",
